--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ img{
     display:inline ;
 }
 body{
-    background-image: url("images/eat.webp");
+    background-image: url("eat.webp");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment:fixed;
